# lifegame

./: CMakeLists.txt  main.cpp
Examples/: example.life  glider gun.life
source/: CMakeLists.txt  Core.cpp  Core.h
source/controller/: GameController.cpp  GameController.h
source/events/: EventBus.cpp  EventBus.h  IEvent.h  ISubscriber.h
source/events/model/: CellChanged.h  FieldChanged.h
source/events/other/: Error.h
source/events/user/: Clear.h  EditMode.h  Exit.h  LoadFile.h  Pause.h  SaveFile.h  Start.h  Stop.h  Tick.h
source/events/view/: CellChanged.h  Resume.h
source/misc/: Config.h  LambdaCreator.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h
source/model/: GameModel.cpp  GameModel.h
source/view/: GameView.cpp  GameView.h  IComponent.cpp  IComponent.h
source/view/componentsObjects/: Console.cpp  Console.h  GameField.cpp  GameField.h  InfoWindow.cpp  InfoWindow.h
source/view/misc/: CommandParser.cpp  CommandParser.h
test/: CMakeLists.txt  test.cpp
